@@ -1,20 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>jetty-project</artifactId>
     <groupId>org.eclipse.jetty</groupId>
     <version>10.0.0-SNAPSHOT</version>
   </parent>
+
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jetty-servlets</artifactId>
   <name>Jetty :: Utility Servlets and Filters</name>
   <description>Utility Servlets from Jetty</description>
   <url>http://www.eclipse.org/jetty</url>
+
   <properties>
     <bundle-symbolic-name>${project.groupId}.servlets</bundle-symbolic-name>
+    <jetty-http-tests-jar>${settings.localRepository}/org/eclipse/jetty/jetty-http/${project.version}/jetty-http-${project.version}-tests.jar</jetty-http-tests-jar>
   </properties>
+
   <build>
     <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerArgs>
+            <arg>--patch-module</arg>
+            <arg>org.eclipse.jetty.http=${jetty-http-tests-jar}</arg>
+            <arg>--add-reads</arg>
+            <arg>org.eclipse.jetty.http=ALL-UNNAMED</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            @{argLine}
+            --patch-module org.eclipse.jetty.http=${jetty-http-tests-jar}
+            --add-modules javax.servlet.api
+            --add-modules org.eclipse.jetty.util
+            --add-modules org.eclipse.jetty.io
+            --add-modules org.eclipse.jetty.http
+            --add-modules org.eclipse.jetty.server
+            --add-modules org.eclipse.jetty.jmx
+            --add-reads org.eclipse.jetty.servlets=java.management
+            --add-reads org.eclipse.jetty.servlets=org.eclipse.jetty.jmx
+          </argLine>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
@@ -24,6 +57,7 @@
       </plugin>
     </plugins>
   </build>
+
   <dependencies>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
@@ -51,6 +85,7 @@
       <artifactId>jetty-io</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-jmx</artifactId>
@@ -77,4 +112,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
 </project>
